Fix y scrollbar on code blocks.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -107,6 +107,7 @@ pre {
   white-space: pre;
   margin: 1em 0px;
   overflow-x: auto;
+  overflow-y: hidden;
 }
 
 figure.highlight {
